fix(react-sdk): z-index

--- a/packages/component-library/src/layer.scss
+++ b/packages/component-library/src/layer.scss
@@ -1,4 +1,4 @@
-@use "./components/component-library/theme";
+@use "./theme";
 
 // The layering here is a bit odd.  These have to be super high numbers so that
 // they overlay no matter what the apps are doing, and in particular, we need
@@ -15,20 +15,4 @@ $layer: (
 
 @function layer($value) {
   @return theme.map-get-strict($layer, $value);
-}
-
-.layerSessionPanel {
-  z-index: layer("session-panel") !important;
-}
-
-.layerModalDialog {
-  z-index: layer("modal-dialog");
-}
-
-.layerToast {
-  z-index: layer("toast");
-}
-
-.layerSelect {
-  z-index: layer("select") !important;
 }
